added preferences support and styles to pages

--- a/laborator-9/src/main/webapp/decorators/footer.xhtml
+++ b/laborator-9/src/main/webapp/decorators/footer.xhtml
@@ -4,6 +4,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <small>Copyright 2023, Haiura Andreea-Isabela</small>
+    <small>Copyright 2024, Haiura Andreea-Isabela &amp; Petrea Daniela</small>
 </f:view>
 </html>
