--- a/laborator-9/src/main/webapp/admin.xhtml
+++ b/laborator-9/src/main/webapp/admin.xhtml
@@ -1,20 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
-    <title>Admin page</title>
+    <h:outputStylesheet library = "css" name = "styles.css"  />
 </h:head>
 
-<h:body>
     <ui:composition template="page.xhtml">
         <ui:define name="content">
             <h2>ADMIN PAGE</h2>
+            <div class="button-container">
+                <h:form enctype="multipart/form-data">
+                    <h:outputLabel value="Upload JSON File:" />
+                    <h:inputFile value="#{FileUploadBean.file}" class="custom-file-input upload-button" />
+                    <h:commandButton value="Upload" action="#{FileUploadBean.upload}" styleClass="custom-button upload-button" />
+
+                    <br />
+
+                    <h:commandButton value="Display Message" action="#{FileUploadBean.displayMessage}" styleClass="custom-button message-button" />
+                </h:form>
+            </div>
         </ui:define>
     </ui:composition>
-</h:body>
 </html>
+
