--- a/laborator-9/src/main/webapp/page.xhtml
+++ b/laborator-9/src/main/webapp/page.xhtml
@@ -1,21 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<h:head> <title> My App </title> </h:head>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<h:head>
+    <title> Campus </title>
+    <h:outputStylesheet library = "css" name = "styles.css"  />
+    <h:outputStylesheet library = "css" name = "user.css"  />
+</h:head>
 <h:body>
-    <!-- header -->
     <div id="header">
         <ui:insert name="header">
             <ui:include src="/decorators/header.xhtml" />
         </ui:insert>
     </div>
-    <!-- center -->
+
     <div id="content">
         <ui:insert name="content">
         </ui:insert>
     </div>
-    <!-- footer -->
+
     <div id="footer">
         <ui:insert name="footer">
             <ui:include src="/decorators/footer.xhtml" />
