--- a/laborator-9/src/main/webapp/user.xhtml
+++ b/laborator-9/src/main/webapp/user.xhtml
@@ -1,19 +1,67 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>User page</title>
+    <h:outputStylesheet library = "css" name = "user.css"  />
 </h:head>
-
-<h:body>
     <ui:composition template="page.xhtml">
         <ui:define name="content">
             <h2>User PAGE</h2>
+            <p:dataTable id="projectDataTable" lazy="true">
+                <h:outputLabel value="#{PreferenceBean.myRooms[0]}"/>
+                <h:outputLabel value="#{PreferenceBean.dormitory}"/>
+                <h:outputLabel value="#{PreferenceBean.username}"/>
+            </p:dataTable>
+            <h1><h:outputText value="Preferences" /></h1>
+            <p:commandButton value="Add" type="button" icon="pi pi-plus fa" onclick="PF('addPreferenceDialog').show()" id="ui-button-add"/>
+            <br/>
+            <h:form>
+                <p:dialog header="Add Preference" widgetVar="addPreferenceDialog" minHeight="40" width="350" showEffect="fade" styleClass="ui-dialog-add-preference">
+                    <h:panelGrid columns="2" id="grid" cellpadding="7">
+                        <h:outputLabel for="dormitory" value="Dormitory: "/>
+                        <p:selectOneMenu id="dormitory" value="#{PreferenceBean.dormitory}" dynamic="true" required="true">
+                            <f:selectItems value="#{PreferenceBean.dormitories}"/>
+                        </p:selectOneMenu>
+
+                        <h:outputLabel for="rooms" value="Rooms: "/>
+                        <p:selectManyMenu id="rooms" value="#{PreferenceBean.myRooms}" dynamic="true">
+                            <f:selectItems value="#{PreferenceBean.rooms}"/>
+                        </p:selectManyMenu>
+                    </h:panelGrid>
+                    <f:facet name="footer">
+                        <p:commandButton value="Save" update="projectDataTable" action="#{PreferenceService.addPreference(PreferenceBean)}" oncomplete="PF('addPreferenceDialog').hide()" showEffect="fade" styleClass="ui-button-save"/>
+                    </f:facet>
+                </p:dialog>
+            </h:form>
+
+
+<!--            <p:dataTable id="projectDataTable" value="#{PreferencesBean.preferences}" var="preferences" lazy="true">-->
+<!--                <p:column headerText="Id">-->
+<!--                    <h:outputText value="#{preferences.id}" />-->
+<!--                </p:column>-->
+
+<!--                <p:column headerText="Date">-->
+<!--                    <h:outputText value="#{preferences.date}" />-->
+<!--                </p:column>-->
+
+<!--                <p:column headerText="Start Time">-->
+<!--                    <h:outputText value="#{preferences.timeStart}" />-->
+<!--                </p:column>-->
+
+<!--                <p:column headerText="End Time">-->
+<!--                    <h:outputText value="#{preferences.timeEnd}" />-->
+<!--                </p:column>-->
+
+<!--                <p:column headerText="Content">-->
+<!--                    <h:outputText value="#{preferences.content}" />-->
+<!--                </p:column>-->
+
+<!--                <p:column headerText="User Id">-->
+<!--                    <h:outputText value="#{preferences.user.id}" />-->
+<!--                </p:column>-->
+<!--            </p:dataTable>-->
         </ui:define>
     </ui:composition>
-</h:body>
 </html>
